--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ font-weight: bold;
 }
 .container{
     /* border: 2px solid red; */
-    /* margin-top: 45px; */
+    margin-bottom: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,27 +85,29 @@ font-weight: bold;
 }
 .random-meal-text h2{
     font-size: 35px;
-    margin-bottom: 40px;
+    margin-bottom: 15px;
     text-align: center;
     font-weight: 900;
 }
 
 .random-meal-text h3{
     /* font-size: 35px; */
-    margin: 30px 0px;
+    margin: 10px 0px;
 }
 .random-meal-text{
     /* border: 2px solid black; */
     background-color:rgb(254, 249, 242);
     /* margin: 0px 50px; */
-    height: 365px;
+    height: 350px;
     padding: 15px;
     width: 350px;
-    /* display: flex; */
+    display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     border-radius: 20px;
     box-shadow: 0 0 10px 0 rgb(164, 164, 164);
+    text-align: center;
     
 }
 .random-meal img{
@@ -114,6 +116,7 @@ font-weight: bold;
 }
 
 .random-meal-text button{
+    margin-top: 15px;
     padding: 10px 20px;
     border-radius:20px ;
     background-color:antiquewhite;
@@ -202,6 +205,7 @@ footer{
     display: flex;
     align-items: center;
     /* justify-content: center; */
+    margin-top: 150px;
     
     
 }
