--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ body{
     padding: 0;
     /* width: 100vw; */
 }
+body::-webkit-scrollbar-track{
+    box-shadow: inset 0 0 5px grey; 
+border-radius: 10px;
+}
+body::-webkit-scrollbar{
+    background-color:transparent ;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: rgb(255, 214, 137);
+    border-radius: 10px;
+}
 .head{
     /* border: 2px solid black; */
     background-color: rgb(255, 248, 235);
@@ -244,12 +255,17 @@ footer{
     font-size: 25px;
     margin: 0px 10px;
 }
-.made{
+.made-by{
     background-color: rgb(20, 20, 20);
     color: white;
-    margin: 0%;
+    /* margin: 0%; */
     text-align: center;
     padding-bottom: 5px;
+}
+.made-by h4{
+    margin-top: 0%;
+    margin-bottom: 5px;
+    border: 1px solid black;
 }
 
 @media all and (max-width: 900px){
@@ -268,7 +284,7 @@ footer{
     }
     .random-meal-text{
         width: 280px;
-        height: 285px;
+        /* height: 285px; */
     }
     .random-meal-text h2{
         font-size: 30px;
